[package]
name = "rust_kvs_tool"
version.workspace = true
edition.workspace = true


[[bin]]
name = "kvs_tool"
path = "src/kvs_tool.rs"


[dependencies]
rust_kvs.workspace = true
tinyjson.workspace = true
pico-args.workspace = true
score_log.workspace = true
stdout_logger = { workspace = true, optional = true }


[features]
default = ["stdout_logger"]
score_log_bridge = []


[lints]
workspace = true
